--- a/latest/src/Componentes/NavBar/NavBar.css
+++ b/latest/src/Componentes/NavBar/NavBar.css
@@ -1,9 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 header{
     background-color: #D83636;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
 }
-.menu-link{
-    :hover
+nav{
+    justify-content: space-around;
 }
