--- a/latest/src/Componentes/NavBar/NavBar.css
+++ b/latest/src/Componentes/NavBar/NavBar.css
@@ -8,10 +8,33 @@
 header{
     background-color: #D83636;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
+    height: 150px;
+    padding-left: 20px;
 }
-nav{
-    justify-content: space-around;
+.logo {
+    margin-bottom: 27px;
+    width: 20%;
+}
+nav{ 
+    display: flex;
+    justify-content: space-between;
+    font-size: 2rem;
+    height: 100px;
+    align-items: center;
+    width: 80%;
+}
+
+.menu-link {
+    margin: 0 10px;
+    text-decoration: underline;
+    text-decoration: none;
+    color: wheat;
+}
+.menu-link:hover {
+    color: white
+}
+.menu-link img{
+    background-color: #D83636;
 }
