--- a/latest/src/main.css
+++ b/latest/src/main.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -6,55 +7,33 @@
 }
 
 :root {
-    --clr-main: #c56cee;
+    --clr-main: #D83636;
     --clr-main-light: #efdaf9;
 }
-html{
-    height: 100%;
-    width: 100%;
-}
-
 .container {
     max-width: 1140px;
     padding-inline: 1.5rem;
     margin: 0 auto;
 }
 
-.main-title {
+.titulo-principal{
     margin-top: 2rem;
-}
+    color: #D83636;
+    text-decoration: underline solid 2px black;
+    font-size: 3rem;
 
-.navbar {
-    padding: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--clr-main);
-    border-bottom: 3px solid black;
 }
-
-.logo {
-    text-decoration: none;
-    height: 100px;
-    width: 100px;
-    color: black;
+.titulo-producto{
+    text-decoration: #424242;
 }
-
+div{
+    background-color: darkslategrey;
+}
 .menu {
     list-style-type: none;
     display: flex;
     align-items: center;
     gap: 1rem;
-}
-
-.menu-link {
-    text-decoration: none;
-    color: black;
-    font-size: 1.2rem;
-}
-
-.menu-link:hover {
-    text-decoration: underline;
 }
 
 .productos {
