hay firestore pero rompi algo y no se que

--- a/latest/src/Componentes/CartWidget/CartWidget.css
+++ b/latest/src/Componentes/CartWidget/CartWidget.css
@@ -1,5 +1,7 @@
 div img{
-    background-color: #D83636;
-    margin-bottom: 4rem;
+    background-color: black;
+    margin-bottom: rem;
+    width: 200px;
+
 
 }
