--- a/latest/src/Componentes/Item/Item.css
+++ b/latest/src/Componentes/Item/Item.css
@@ -40,7 +40,8 @@ p{
 }
 
 .producto > img {
-    width: 100%;
+    width: 400px;
+    height: 300px;
     aspect-ratio: 2/1;
     object-fit: cover;
 }
